# ctrlm-airflow-migration

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  conftest.py  requirements.txt
core/: pyproject.toml
core/ctrlm_core/: __init__.py  autoedit.py  cuts.py  desugar.py  emit.py  graph.py  model.py  operator_registry.py  parser.py  pipeline.py  schedule.py  stats.py
core/ctrlm_core/templates/: dag.py.j2
dashboard/: build.py  template.html
docs/: coverage-matrix.md  impl-contracts-v2.md  impl-contracts-v3.md  impl-contracts-v4.md  impl-contracts-v5.md  impl-contracts-v6.md  impl-contracts-v7.md  impl-contracts.md  job-mapping-catalog.md  operator-mapping.md  partition-algorithm.md
examples/exports/: sample_bank.xml  sample_finance.xml  sample_hr.xml  sample_mfg.xml  sample_ops.xml
mapping-config/: calendars.yaml  nodes.yaml  notify.yaml
plugins/: README.md  ctm_plugin.py
plugins/ctm_plugins/: __init__.py  _compat.py  _odate.py  _params.py  callbacks.py  operators.py  sensors.py  timetables.py
scripts/: run_all.ps1
strategy_components/: __init__.py  partitioner.py  run.py
strategy_single_entry/: __init__.py  partitioner.py  run.py
tests/: test_components.py  test_dashboard.py  test_desugar.py  test_emit.py  test_graph.py  test_parser.py  test_plugins.py  test_registry.py  test_schedule.py  test_single_entry.py
